--- a/References.bib
+++ b/References.bib
@@ -1,10 +1,14 @@
+@misc{TIMIT,
+author = {Massachusetts Institute of Technology and SRI International and Texas Instrument, Inc.},
+title = {TIMIT Acoustic-Phonetic Continuous Speech Corpus},
+year = {1993},
+note = {data retrieved from Linguistic Data Consortium, \url{https://catalog.ldc.upenn.edu/LDC93S1}}
+}
 
-@incollection{GAN,
-	title = {Generative Adversarial Nets},
-	author = {Goodfellow, Ian and Pouget-Abadie, Jean and Mirza, Mehdi and Xu, Bing and Warde-Farley, David and Ozair, Sherjil and Courville, Aaron and Bengio, Yoshua},
-	booktitle = {Advances in Neural Information Processing Systems 27},
-	pages = {2672--2680},
-	year = {2014},
-	publisher = {Curran Associates, Inc.},
-	url = {http://papers.nips.cc/paper/5423-generative-adversarial-nets.pdf}
+
+@misc{TIMIT_Utils,
+author = {Colin Prepscius},
+title = {timit Utility Library},
+year = {2018},
+note = {data retrieved from Colin Prepscius' Github, \url{https://github.com/colinator/timit_utils/blob/master}}
 }
