Final Jessica notbooks.

--- a/jmb221_notebook-best-network.ipynb
+++ b/jmb221_notebook-best-network.ipynb
@@ -127,6 +127,19 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence_lengths = []\n",
+    "for p in range(len(train.people)):\n",
+    "    for s in range(len(train.person_by_index(p).sentences)):\n",
+    "        sentence = train.person_by_index(p).sentence_by_index(s).raw_audio\n",
+    "        sentence_lengths.append(len(sentence))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
    "outputs": [],
@@ -510,20 +523,6 @@
     "    print('Optimizer Learning rate: {0:.4f}'.format(optimizer.param_groups[0]['lr']))\n",
     "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -542,7 +541,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
