--- a/Janet_code/Xinlin_Chen_melfilterbanks.ipynb
+++ b/Janet_code/Xinlin_Chen_melfilterbanks.ipynb
@@ -342,7 +342,7 @@
     "    crit = nn.CrossEntropyLoss()\n",
     "    crit2 = nn.CrossEntropyLoss()\n",
     "    crit3 = nn.CrossEntropyLoss()\n",
-    "    optimizer = torch.optim.Adam(model.parameters())\n",
+    "    optimizer = torch.optim.Adam(model.parameters(),lr=1e-3)\n",
     "    # Train\n",
     "    epoch_losses = []\n",
     "    for i in range(num_epochs):\n",
